# app/Http/Controllers/Api/FloatingWhatsappController.php
@@ -9,6 +9,26 @@ use Illuminate\Support\Facades\Log;
 
 class FloatingWhatsappController extends Controller
 {
+  /**
+   * @OA\Get(
+   *     path="/api/v1/floating-whatsapp",
+   *     tags={"Floating Whatsapp"},
+   *     summary="Get list of floating whatsapp",
+   *     description="Returns list of floating whatsapp",
+   *     @OA\Response(
+   *         response=200,
+   *         description="successful operation",
+   *         @OA\JsonContent(
+   *             type="array",
+   *             @OA\Items(ref="#/components/schemas/FloatingWhatsapp")
+   *         )
+   *     ),
+   *     @OA\Response(
+   *         response=500,
+   *         description="Internal Server Error"
+   *     )
+   * )
+   */
   public function index()
   {
     try {
