# app/Http/Controllers/Api/KontakKamiController.php
@@ -9,6 +9,26 @@ use Illuminate\Support\Facades\Log;
 
 class KontakKamiController extends Controller
 {
+  /**
+   * @OA\Get(
+   *     path="/api/v1/contact-us",
+   *     tags={"Contact Us"},
+   *     summary="Get list of contact us",
+   *     description="Returns list of contact us",
+   *     @OA\Response(
+   *         response=200,
+   *         description="successful operation",
+   *         @OA\JsonContent(
+   *             type="array",
+   *             @OA\Items(ref="#/components/schemas/ContactUs")
+   *         )
+   *     ),
+   *     @OA\Response(
+   *         response=500,
+   *         description="Internal Server Error"
+   *     )
+   * )
+   */
   public function index()
   {
     try {
